# src/app/data/model/CountryDto.ts
@@ -3,7 +3,7 @@
  * No descripton provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
  * OpenAPI spec version: v1
- *
+ * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
  * https://github.com/swagger-api/swagger-codegen.git
@@ -25,41 +25,14 @@
 'use strict';
 import * as models from './models';
 
-export interface ContactDto {
-
+export interface CountryDto {
+    
 
     id?: string;
 
-    userId?: string;
-
     created?: Date;
 
-    firstname?: string;
+    isoCode?: string;
 
-    lastname?: string;
-
-    title?: string;
-
-    academicDegree?: string;
-
-    suffix?: string;
-
-    gender?: ContactDto.GenderEnum;
-
-    birthday?: Date;
-
-    image?: string;
-
-    imageUri?: string;
-
-    addresses?: Array<models.AddressDto>;
-
-    emailAddresses?: Array<string>;
-}
-export namespace ContactDto {
-
-    export enum GenderEnum {
-        MALE = <any> '0',
-        FEMALE = <any> '1',
-    }
+    name?: string;
 }
