# src/app/data/model/models.ts
@@ -1,2 +1,3 @@
 export * from './AddressDto';
 export * from './ContactDto';
+export * from './CountryDto';
