# swagger/swagger.json
@@ -4,9 +4,9 @@
     "version": "v1",
     "title": "CloudArchitektur"
   },
-  "host": "localhost:55062",
+  "host": "torpedomaximumapi.azurewebsites.net",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/api/Contacts": {
@@ -14,7 +14,6 @@
         "tags": [
           "Contacts"
         ],
-        "summary": "Get all contacts for current user from database",
         "operationId": "Contacts_GetAll",
         "consumes": [],
         "produces": [
@@ -25,13 +24,10 @@
         ],
         "responses": {
           "200": {
-            "description": "Successfully fetched contacts",
+            "description": "OK",
             "schema": {
               "type": "object"
             }
-          },
-          "400": {
-            "description": "No contacts found"
           }
         }
       },
@@ -115,7 +111,6 @@
         "tags": [
           "Contacts"
         ],
-        "summary": "Get contact by ID",
         "operationId": "Contacts_Get",
         "consumes": [],
         "produces": [
@@ -128,7 +123,6 @@
           {
             "name": "id",
             "in": "path",
-            "description": "ID of contact to find",
             "required": true,
             "type": "string",
             "format": "uuid"
@@ -136,16 +130,10 @@
         ],
         "responses": {
           "200": {
-            "description": "Successfully fetched contact",
+            "description": "OK",
             "schema": {
               "type": "object"
             }
-          },
-          "400": {
-            "description": "Invalid ID supplied"
-          },
-          "404": {
-            "description": "Contact not found"
           }
         }
       },
@@ -231,6 +219,12 @@
           "format": "date-time",
           "type": "string"
         },
+        "Image": {
+          "type": "string"
+        },
+        "ImageUri": {
+          "type": "string"
+        },
         "Addresses": {
           "type": "array",
           "items": {
@@ -252,7 +246,8 @@
         "Number",
         "Zip",
         "City",
-        "Region"
+        "Region",
+        "Country"
       ],
       "type": "object",
       "properties": {
@@ -280,6 +275,33 @@
           "type": "string"
         },
         "Region": {
+          "type": "string"
+        },
+        "Country": {
+          "$ref": "#/definitions/CountryDto"
+        }
+      }
+    },
+    "CountryDto": {
+      "required": [
+        "Created",
+        "IsoCode",
+        "Name"
+      ],
+      "type": "object",
+      "properties": {
+        "Id": {
+          "format": "uuid",
+          "type": "string"
+        },
+        "Created": {
+          "format": "date-time",
+          "type": "string"
+        },
+        "IsoCode": {
+          "type": "string"
+        },
+        "Name": {
           "type": "string"
         }
       }
